--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,7 @@ cmake_minimum_required(VERSION 3.0)
 project(gaffertape)
 set(Boost_USE_MULTITHREADED ON)
 set(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
+set(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
 
 find_package(Boost REQUIRED COMPONENTS system)
 include_directories(${Boost_INCLUDE_DIRS})
@@ -9,7 +10,7 @@ link_directories(${Boost_LIBRARY_DIRS})
 
 file(GLOB webserver_source ${PROJECT_SOURCE_DIR}/webserver/*.cpp)
 
-add_library(gaffertape-webserver SHARED ${webserver_source})
+add_library(gaffertape-webserver ${webserver_source})
 target_link_libraries(gaffertape-webserver ${Boost_LIBRARIES})
 
 add_executable(gaffertape main.cpp)
