--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,23 +1,28 @@
 cmake_minimum_required(VERSION 3.0)
 project(gaffertape)
-set(Boost_USE_MULTITHREADED ON)
+
+set (CMAKE_CXX_STANDARD 17)
 set(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
 set(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
-
-find_package(Boost REQUIRED COMPONENTS system python)
-include_directories(${Boost_INCLUDE_DIRS})
-link_directories(${Boost_LIBRARY_DIRS})
 
 find_package(PythonLibs REQUIRED)
 include_directories(${PYTHON_INCLUDE_DIRS})
 link_directories(${PYTHON_LIBRARY_DIRS})
 
-file(GLOB python_source ${PROJECT_SOURCE_DIR}/python/*.cpp)
-add_library(gaffertape-python ${python_source})
+SET(Boost_USE_STATIC_RUNTIME OFF)
+set(Boost_USE_MULTITHREADED ON)
+set(Boost_USE_STATIC_LIBS OFF)
+
+find_package(Boost REQUIRED COMPONENTS system python)
+include_directories(${Boost_INCLUDE_DIRS})
+link_directories(${Boost_LIBRARY_DIRS})
+
+file(GLOB python_source ${PROJECT_SOURCE_DIR}/loader/*.cpp)
+add_library(gaffertape-load ${python_source})
 
 file(GLOB webserver_source ${PROJECT_SOURCE_DIR}/webserver/*.cpp)
 add_library(gaffertape-webserver ${webserver_source})
 
 add_executable(gaffertape main.cpp)
 
-target_link_libraries(gaffertape PRIVATE ${Boost_LIBRARIES} gaffertape-webserver gaffertape-python PRIVATE ${PYTHON_LIBRARIES})
+target_link_libraries(gaffertape ${PYTHON_LIBRARIES} ${Boost_LIBRARIES} gaffertape-webserver gaffertape-load)
