--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.0)
 project(gaffertape)
 
-set (CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD 17)
 set(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
 set(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
 
@@ -17,12 +17,12 @@ find_package(Boost REQUIRED COMPONENTS system python)
 include_directories(${Boost_INCLUDE_DIRS})
 link_directories(${Boost_LIBRARY_DIRS})
 
-file(GLOB python_source ${PROJECT_SOURCE_DIR}/loader/*.cpp)
-add_library(gaffertape-load ${python_source})
+file(GLOB load_source ${PROJECT_SOURCE_DIR}/loader/*.cpp)
+add_library(gaffertape-load ${load_source})
 
 file(GLOB webserver_source ${PROJECT_SOURCE_DIR}/webserver/*.cpp)
 add_library(gaffertape-webserver ${webserver_source})
 
 add_executable(gaffertape main.cpp)
 
-target_link_libraries(gaffertape ${PYTHON_LIBRARIES} ${Boost_LIBRARIES} gaffertape-webserver gaffertape-load)
+target_link_libraries(gaffertape gaffertape-webserver gaffertape-load ${PYTHON_LIBRARIES} ${Boost_LIBRARIES})
