--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,9 @@ set(CMAKE_CXX_STANDARD 17)
 set(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
 set(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
 
-find_package(PythonLibs REQUIRED)
+find_package(PythonInterp EXACT 3 REQUIRED)
+
+find_package(PythonLibs EXACT 3 REQUIRED)
 include_directories(${PYTHON_INCLUDE_DIRS})
 link_directories(${PYTHON_LIBRARY_DIRS})
 
@@ -13,7 +15,12 @@ SET(Boost_USE_STATIC_RUNTIME OFF)
 set(Boost_USE_MULTITHREADED ON)
 set(Boost_USE_STATIC_LIBS OFF)
 
-find_package(Boost REQUIRED COMPONENTS system python)
+if(UNIX)
+  set(pythboost python-py${PYTHON_VERSION_MAJOR}${PYTHON_VERSION_MINOR})
+else()
+  set(pythboost python${PYTHON_VERSION_MAJOR})
+endif()
+find_package(Boost REQUIRED COMPONENTS system ${pythboost})
 include_directories(${Boost_INCLUDE_DIRS})
 link_directories(${Boost_LIBRARY_DIRS})
 
@@ -25,4 +32,6 @@ add_library(gaffertape-webserver ${webserver_source})
 
 add_executable(gaffertape main.cpp)
 
-target_link_libraries(gaffertape gaffertape-webserver gaffertape-load ${PYTHON_LIBRARIES} ${Boost_LIBRARIES})
+set(links gaffertape-webserver gaffertape-load ${Boost_LIBRARIES} ${PYTHON_LIBRARIES})
+
+target_link_libraries(gaffertape ${links} ${links})
